--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/helloworld.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/helloworld.html
@@ -6,8 +6,11 @@
 </head>>
 
 <body>
-    Hello World of Spring!
+Hello World of Spring!
 <br><br>
 Student name: <span th:text="${param.studentName}"/>
+
+<br><br>
+The message: <span th:text="${message}"/>
 </body>
 </html>
