Pratice to use Spring MVC Form data binding on Drop-Down Lists. Steps: 1. Update HTML form 2. Update Student class - add getter/setter for new property 3. Update confirmation page

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
@@ -11,6 +11,15 @@
         <br><br>
         Last Name: <input type="text" th:field="*{lastName}"/>
         <br><br>
+        Country:
+        <select th:field="*{country}">
+            <option th:value="Brazil">Brazil</option>
+            <option th:value="China">China</option>
+            <option th:value="India">India</option>
+            <option th:value="France">France</option>
+            <option th:value="Germany">Germany</option>
+        </select>
+        <br><br>
         <input type="submit"/>
     </form>
 </body>
