--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-confirmation.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-confirmation.html
@@ -7,5 +7,7 @@
 <h3>Student Confirmation</h3>
 <body>
 The student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}" />
+<br><br>
+Country: <span th:text="${student.country}" />
 </body>
 </html>
