--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
@@ -13,11 +13,7 @@
         <br><br>
         Country:
         <select th:field="*{country}">
-            <option th:value="Brazil">Brazil</option>
-            <option th:value="China">China</option>
-            <option th:value="India">India</option>
-            <option th:value="France">France</option>
-            <option th:value="Germany">Germany</option>
+            <option th:each="tempCountry: ${countries}" th:value="${tempCountry}" th:text="${tempCountry}"/>
         </select>
         <br><br>
         <input type="submit"/>
