--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
@@ -17,9 +17,8 @@
         </select>
         <br><br>
         Favorite Programming Language:
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-        <input type="radio" th:field="*{favoriteLanguage}" th:value="${'C++'}">C++</input>
+        <input type="radio" th:field="*{favoriteLanguage}" th:each="tempLang: ${languages}" th:value="${tempLang}" th:text="${tempLang}"/>
+
         <br><br>
         <input type="submit"/>
     </form>
