Pratice to use Spring MVC Form data binding on Check Boxes. Steps: 1. Update HTML form 2. Update Student class - add getter/setter for new property 3. Update confirmation page

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-confirmation.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-confirmation.html
@@ -11,5 +11,10 @@ The student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.
 Country: <span th:text="${student.country}" />
 <br><br>
 Favorite Programming Language: <span th:text="${student.favoriteLanguage}" />
+<br><br>
+Favorite Operating Systems:
+<ul>
+    <li th:each="tempSystem: ${student.favoriteSystems}" th:text="${tempSystem}">
+</ul>
 </body>
 </html>
