--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
@@ -20,6 +20,11 @@
         <input type="radio" th:field="*{favoriteLanguage}" th:each="tempLang: ${languages}" th:value="${tempLang}" th:text="${tempLang}"/>
 
         <br><br>
+        Favorite Operating Systems:
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOS">macOs</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+        <br><br>
         <input type="submit"/>
     </form>
 </body>
