Pratice to use Spring MVC Form data binding on Check Boxes without hard coding for options(use properties file). Steps: 1. Add list of systems to application.properties file 2. Inject the systems in the StudentController using @Value 3. Add the list of systems to the model 4. In HTML form, generate list of <input> tags for the systems

--- a/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
+++ b/07-spring-boot-spring-mvc/01-thymeleafdemo-helloword/src/main/resources/templates/student-form.html
@@ -21,9 +21,7 @@
 
         <br><br>
         Favorite Operating Systems:
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="macOS">macOs</input>
-        <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+        <input type="checkbox" th:field="*{favoriteSystems}" th:each="tempSys: ${systems}" th:value="${tempSys}" th:text="${tempSys}"/>
         <br><br>
         <input type="submit"/>
     </form>
