--- a/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-form.html
+++ b/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-form.html
@@ -19,6 +19,12 @@
     <span th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}" class="error"></span>
 
     <br><br>
+    Free passes:  <input type="text" th:field="*{freePasses}"/>
+
+    <!-- Add error message (if present) -->
+    <span th:if="${#fields.hasErrors('freePasses')}" th:errors="*{freePasses}" class="error"></span>
+
+    <br><br>
     <input type="submit" value="Submit"/>
 </form>
 
