--- a/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-form.html
+++ b/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-form.html
@@ -25,6 +25,12 @@
     <span th:if="${#fields.hasErrors('freePasses')}" th:errors="*{freePasses}" class="error"></span>
 
     <br><br>
+    Postal code: <input type="text" th:field="*{postalCode}"/>
+
+    <!-- Add error message (if present) -->
+    <span th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="error"></span>
+
+    <br><br>
     <input type="submit" value="Submit"/>
 </form>
 
