--- a/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-confirmation.html
+++ b/07-spring-boot-spring-mvc/validationdemo/validationdemo/src/main/resources/templates/customer-confirmation.html
@@ -10,5 +10,7 @@ The customer is confirmed: <span th:text="${customer.firstName + ' ' + customer.
 Free passes: <span th:text="${customer.freePasses}" />
 <br><br>
 Postal Code: <span th:text="${customer.postalCode}" />
+<br><br>
+Course Code: <span th:text="${customer.courseCode}" />
 </body>
 </html>
