--- a/07-spring-boot-spring-mvc-crud/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
+++ b/07-spring-boot-spring-mvc-crud/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
@@ -15,6 +15,9 @@
         <form action="#" th:action="@{/employees/save}"
                             th:object="${employee}" method="POST">
 
+            <!-- Add hidden form field to handle the update-->
+            <input type="hidden" th:field="*{id}">
+
             <input type="text" th:field="*{firstName}" class="form-control mb-4 w-25"
                                 placeholder="First name">
             <input type="text" th:field="*{lastName}" class="form-control mb-4 w-25"
