--- a/07-spring-boot-spring-mvc-crud/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -24,12 +24,18 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
+            <th>Action</th>
         </tr>
         <tbody>
             <tr th:each="tempEmployee : ${employees}">
                 <td th:text="${tempEmployee.firstName}"/>
                 <td th:text="${tempEmployee.lastName}"/>
                 <td th:text="${tempEmployee.email}"/>
+                <!-- Add update button link -->
+                <td>
+                    <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                                class="btn btn-info btn-sm">Update</a>
+                </td>
             </tr>
         </tbody>
         </thead>
