--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Company Home Page</title>
@@ -7,6 +7,12 @@
 <body>
     <h2>Company Home Page</h2>
     <hr>
-    Welcome to the company home page!
+    <p>
+        Welcome to the company home page!
+    </p>
+    <!-- Add a logout button -->
+    <form action="#" th:action="@{/logout}" method="POST">
+        <input type="submit" value="Logout"/>
+    </form>
 </body>
 </html>
