--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Company Home Page</title>
@@ -9,6 +9,13 @@
     <hr>
     <p>
         Welcome to the company home page!
+    </p>
+    <hr>
+    <!-- display username and role -->
+    <p>
+        User:<span sec:authentication="principal.username"></span>
+        <br><br>
+        Role(s):<span sec:authentication="principal.authorities"></span>
     </p>
     <!-- Add a logout button -->
     <form action="#" th:action="@{/logout}" method="POST">
