--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mvc-security-default/src/main/resources/templates/home.html
@@ -19,18 +19,22 @@
     </p>
 
     <hr>
+    <div sec:authorize="hasRole('MANAGER')">
     <!-- Add a link to point to /leaders ... this is for the managers -->
     <p>
         <a th:href="@{/leaders}">Leadership Meeting</a>
         (Only for Manager peeps)
     </p>
+    </div>
     <hr>
 
+    <div sec:authorize="hasRole('ADMIN')">
     <!-- Add a link to point to /systems ... this is for the admins -->
     <p>
         <a th:href="@{/systems}">IT Systems Meeting</a>
         (Only for Admin peeps)
     </p>
+    </div>
     <hr>
     <!-- Add a logout button -->
     <form action="#" th:action="@{/logout}" method="POST">
